--- a/pages/detalle.html
+++ b/pages/detalle.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://kit.fontawesome.com/f7fb471b65.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../favibook.png" type="image/x-icon">
 </head>
 <body>
     <header class="header">
@@ -28,7 +28,7 @@
       <section class="detalle"  data-aos="zoom-in" >
         <div class="contenedorDetalle" >
             <div class="imgDetalle">
-                <img src="../assets/img/peli_1.jpg" alt="mario pelicula 2023">
+                <img src="../assets/img/peli_1.jpg" alt="El Hobbit">
             </div>
             <div class="textoDetalle">
                 <h1>El Hobbit (2023)</h1>
