--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="./css/estilos.css">
     <script src="https://kit.fontawesome.com/f7fb471b65.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
    
     <link rel="shortcut icon" href="favibook.png" type="image/x-icon">
 </head>
@@ -185,7 +189,7 @@
             </form>
         </section>
 
-        <section data-aos="fade-up" data-aos-offset="200" data-aos-delay="100" data-aos-duration="2000" class="librosBest">
+<!--         <section data-aos="fade-up" data-aos-offset="200" data-aos-delay="100" data-aos-duration="2000" class="librosBest">
             <h3 class="tituloSection">Los mas Vendidos</h3>
              <div class="best">
                 <div class="libItem">
@@ -225,7 +229,87 @@
                     <img class="imgbest" src="./assets/img/best_12.jpg" alt="best_12" loading="lazy">
                 </div>               
             </div>
-        </section>
+        </section> -->
+ 
+
+<div class="container">
+  <h2>Mas Vendidas</h2>  
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
+      <li data-target="#myCarousel" data-slide-to="5"></li>
+      <li data-target="#myCarousel" data-slide-to="6"></li>
+      <li data-target="#myCarousel" data-slide-to="7"></li>
+      <li data-target="#myCarousel" data-slide-to="8"></li>
+      <li data-target="#myCarousel" data-slide-to="9"></li>
+      <li data-target="#myCarousel" data-slide-to="10"></li>
+      <li data-target="#myCarousel" data-slide-to="11"></li>
+      <li data-target="#myCarousel" data-slide-to="12"></li>
+      
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img src="./assets/img/best_1.jpg"  alt="Los Angeles" style="width:25%;">
+      </div>
+      <div class="item">
+        <img src="./assets/img/best_2.jpg"  alt="Chicago" style="width:25%;">
+      </div>    
+      <div class="item">
+        <img src="./assets/img/best_3.jpg"  alt="New york" style="width:25%;">
+      </div>
+      <div class="item">
+        <img src="./assets/img/best_4.jpg"  alt="New york" style="width:25%;">
+      </div>
+      <div class="item">
+        <img src="./assets/img/best_5.jpg"  alt="New york" style="width:25%;">
+      </div>
+      <div class="item">
+        <img src="./assets/img/best_5.jpg"  alt="New york" style="width:25%;">
+      </div>
+      <div class="item">
+        <img src="./assets/img/best_6.jpg"  alt="New york" style="width:25%;">
+      </div>
+      <div class="item">
+        <img src="./assets/img/best_7.jpg"  alt="New york" style="width:25%;">
+      </div>
+      <div class="item">
+        <img src="./assets/img/best_8.jpg"  alt="New york" style="width:25%;">
+      </div>
+      <div class="item">
+        <img src="./assets/img/best_9.jpg"  alt="New york" style="width:25%;">
+      </div>
+      <div class="item">
+        <img src="./assets/img/best_10.jpg"  alt="New york" style="width:25%;">
+      </div>
+      <div class="item">
+        <img src="./assets/img/best_11.jpg"  alt="New york" style="width:25%;">
+      </div>
+      <div class="item">
+        <img src="./assets/img/best_12.jpg"  alt="New york" style="width:25%;">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+
+
+  </div>
+</div>
+
 
     </main>
     <footer class="footer">
